added projects deck

--- a/src/index.html
+++ b/src/index.html
@@ -79,38 +79,89 @@
             </h1>
 
             <div class="card-deck">
-                <div class="card">
-                    <img class="project-image" src="assets/avatar.jpg" alt="">
-                    <p class="project-description">
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur error odio laboriosam maiores
-                        voluptatibus neque? Doloribus libero ipsa maxime nam cupiditate quos perferendis sed dignissimos
-                        aliquam, soluta accusamus aperiam earum.
-                    </p>
+
+                <div class="flip-card">
+                    <div class="flip-card-inner">
+                        <div class="flip-card-front">
+                            <img src="assets/khata.png" alt="Khata">
+                        </div>
+                        <div class="flip-card-back">
+                            <h1>KHATA</h1>
+                            <p>
+                                Khata is a mini-ERP solution with modules like
+                                <b>inventory</b>,
+                                <b>payroll</b>,
+                                <b>sales</b>,
+                                <b>purchase</b>,
+                                <b>expense</b>,
+                                <b>reports</b>, etc.
+                                <br />
+                                This system is currently being used in a business with multiple outlets serving hundreds
+                                of customers.
+                            </p>
+
+                            <ul class="tags">
+                                <li>C#</li>
+                                <li>ASP.NET Core</li>
+                                <li>SQL Server</li>
+                                <li>EF Core</li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
-                <div class="card">
-                    <img class="project-image" src="assets/avatar.jpg" alt="">
-                    <p class="project-description">
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur error odio laboriosam maiores
-                        voluptatibus neque? Doloribus libero ipsa maxime nam cupiditate quos perferendis sed dignissimos
-                        aliquam, soluta accusamus aperiam earum.
-                    </p>
+
+                <div class="flip-card">
+                    <div class="flip-card-inner">
+                        <div class="flip-card-front">
+                            <img src="assets/avatar.jpg" alt="Avatar">
+                        </div>
+                        <div class="flip-card-back">
+                            <h1>John Doe</h1>
+                            <p>Architect & Engineer</p>
+                            <p>We love that guy</p>
+                        </div>
+                    </div>
                 </div>
-                <div class="card">
-                    <img class="project-image" src="assets/avatar.jpg" alt="">
-                    <p class="project-description">
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur error odio laboriosam maiores
-                        voluptatibus neque? Doloribus libero ipsa maxime nam cupiditate quos perferendis sed dignissimos
-                        aliquam, soluta accusamus aperiam earum.
-                    </p>
+
+                <div class="flip-card">
+                    <div class="flip-card-inner">
+                        <div class="flip-card-front">
+                            <img src="assets/avatar.jpg" alt="Avatar">
+                        </div>
+                        <div class="flip-card-back">
+                            <h1>John Doe</h1>
+                            <p>Architect & Engineer</p>
+                            <p>We love that guy</p>
+                        </div>
+                    </div>
                 </div>
-                <div class="card">
-                    <img class="project-image" src="assets/avatar.jpg" alt="">
-                    <p class="project-description">
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur error odio laboriosam maiores
-                        voluptatibus neque? Doloribus libero ipsa maxime nam cupiditate quos perferendis sed dignissimos
-                        aliquam, soluta accusamus aperiam earum.
-                    </p>
+
+                <div class="flip-card">
+                    <div class="flip-card-inner">
+                        <div class="flip-card-front">
+                            <img src="assets/avatar.jpg" alt="Avatar">
+                        </div>
+                        <div class="flip-card-back">
+                            <h1>John Doe</h1>
+                            <p>Architect & Engineer</p>
+                            <p>We love that guy</p>
+                        </div>
+                    </div>
                 </div>
+
+                <div class="flip-card">
+                    <div class="flip-card-inner">
+                        <div class="flip-card-front">
+                            <img src="assets/avatar.jpg" alt="Avatar">
+                        </div>
+                        <div class="flip-card-back">
+                            <h1>John Doe</h1>
+                            <p>Architect & Engineer</p>
+                            <p>We love that guy</p>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </section>
 
