--- a/src/index.html
+++ b/src/index.html
@@ -86,26 +86,30 @@
                             <img src="assets/khata.png" alt="Khata">
                         </div>
                         <div class="flip-card-back">
-                            <h1>KHATA</h1>
-                            <p>
-                                Khata is a mini-ERP solution with modules like
-                                <b>inventory</b>,
-                                <b>payroll</b>,
-                                <b>sales</b>,
-                                <b>purchase</b>,
-                                <b>expense</b>,
-                                <b>reports</b>, etc.
-                                <br />
-                                This system is currently being used in a business with multiple outlets serving hundreds
-                                of customers.
-                            </p>
+                            <div class="project-details">
+                                <h1>KHATA</h1>
+                                
+                                <p>
+                                    Khata is a mini-ERP solution with modules like
+                                    <b>inventory</b>,
+                                    <b>payroll</b>,
+                                    <b>sales</b>,
+                                    <b>purchase</b>,
+                                    <b>expense</b>,
+                                    <b>reports</b>, etc.
+                                    <br />
+                                    This system is currently being used in a business with multiple outlets serving
+                                    hundreds
+                                    of customers.
+                                </p>
 
-                            <ul class="tags">
-                                <li>C#</li>
-                                <li>ASP.NET Core</li>
-                                <li>SQL Server</li>
-                                <li>EF Core</li>
-                            </ul>
+                                <ul class="tags">
+                                    <li>C#</li>
+                                    <li>ASP.NET Core</li>
+                                    <li>SQL Server</li>
+                                    <li>EF Core</li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
                 </div>
