--- a/src/index.html
+++ b/src/index.html
@@ -79,37 +79,29 @@
             </h1>
 
             <div class="card-deck">
-
                 <div class="flip-card">
                     <div class="flip-card-inner">
                         <div class="flip-card-front">
                             <img src="assets/khata.png" alt="Khata">
                         </div>
                         <div class="flip-card-back">
-                            <div class="project-details">
-                                <h1>KHATA</h1>
-                                
-                                <p>
-                                    Khata is a mini-ERP solution with modules like
-                                    <b>inventory</b>,
-                                    <b>payroll</b>,
-                                    <b>sales</b>,
-                                    <b>purchase</b>,
-                                    <b>expense</b>,
-                                    <b>reports</b>, etc.
-                                    <br />
-                                    This system is currently being used in a business with multiple outlets serving
-                                    hundreds
-                                    of customers.
-                                </p>
+                            <h1>KHATA</h1>
 
-                                <ul class="tags">
-                                    <li>C#</li>
-                                    <li>ASP.NET Core</li>
-                                    <li>SQL Server</li>
-                                    <li>EF Core</li>
-                                </ul>
-                            </div>
+                            <p>
+                                Khata is a mini-ERP solution with modules like
+                                <b>inventory</b>,
+                                <b>payroll</b>,
+                                <b>sales</b>,
+                                <b>purchase</b>,
+                                <b>expense</b>,
+                                <b>reports</b>, etc.
+                            </p>
+
+                            <ul class="tags">
+                                <li>C#</li>
+                                <li>ASP.NET Core</li>
+                                <li>EF Core</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
@@ -117,12 +109,26 @@
                 <div class="flip-card">
                     <div class="flip-card-inner">
                         <div class="flip-card-front">
-                            <img src="assets/avatar.jpg" alt="Avatar">
+                            <img src="assets/emrg.png" alt="EMRG">
                         </div>
                         <div class="flip-card-back">
-                            <h1>John Doe</h1>
-                            <p>Architect & Engineer</p>
-                            <p>We love that guy</p>
+                            <a href="https://dev.azure.com/brotal/CSE411_EMRG" target="_blank">
+                                <h1>EMRG</h1>
+                            </a>
+
+                            <p>
+                                EMRG is a <b>University Management System</b> with modules like Faculty, Students,
+                                Departments, Programs, Sections etc. There is also a <b>Advising / Course Enrollment</b>
+                                module
+                                in the system.
+                            </p>
+
+                            <ul class="tags">
+                                <li>C#</li>
+                                <li>ASP.NET Core</li>
+                                <li>Razor</li>
+                                <li>JS</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
@@ -130,12 +136,22 @@
                 <div class="flip-card">
                     <div class="flip-card-inner">
                         <div class="flip-card-front">
-                            <img src="assets/avatar.jpg" alt="Avatar">
+                            <img src="assets/play.png" alt="Play">
                         </div>
                         <div class="flip-card-back">
-                            <h1>John Doe</h1>
-                            <p>Architect & Engineer</p>
-                            <p>We love that guy</p>
+                            <h1>Play</h1>
+
+                            <p>
+                                Play is a sports events tracking site.
+                                It uses a <b>C# .NET Core Web API</b> back-end and
+                                a <b>Fable-Elmish-React</b> front-end.
+                            </p>
+
+                            <ul class="tags">
+                                <li>F#</li>
+                                <li>Fable</li>
+                                <li>.NET Core Web API</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
@@ -143,12 +159,25 @@
                 <div class="flip-card">
                     <div class="flip-card-inner">
                         <div class="flip-card-front">
-                            <img src="assets/avatar.jpg" alt="Avatar">
+                            <img src="assets/hepatitis.png" alt="Hepatitis Prediction">
                         </div>
                         <div class="flip-card-back">
-                            <h1>John Doe</h1>
-                            <p>Architect & Engineer</p>
-                            <p>We love that guy</p>
+                            <a href="https://dev.azure.com/brotal/HepatitisPrediction" target="_blank">
+                                <h1>Hepatitis Prediction</h1>
+                            </a>
+
+                            <p>
+                                Hepatitis Prediction is a machine learning project that uses
+                                <b>F#</b> for processing 1 Million data rows and <b>scikit-learn</b>
+                                for predicting probability of patient dying based on 17 features from the dataset.
+                            </p>
+
+                            <ul class="tags">
+                                <li>F#</li>
+                                <li>Python</li>
+                                <li>ML</li>
+                                <li>scikit-learn</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
@@ -156,17 +185,54 @@
                 <div class="flip-card">
                     <div class="flip-card-inner">
                         <div class="flip-card-front">
-                            <img src="assets/avatar.jpg" alt="Avatar">
+                            <img src="assets/xpchain.png" alt="XPChain">
                         </div>
                         <div class="flip-card-back">
-                            <h1>John Doe</h1>
-                            <p>Architect & Engineer</p>
-                            <p>We love that guy</p>
+                            <a href="https://dev.azure.com/brotal/XPChain" target="_blank">
+                                <h1>XPChain</h1>
+                            </a>
+
+                            <p>
+                                XPChain is a <b>blockchain</b> based solution for immutably and securely
+                                storing employees' <b>work experiences</b>, certificates, etc.
+                                in terms of <b>XPTokens</b>.
+                                Uses <b>Digital Signatures</b> for security and anonymity.
+                            </p>
+
+                            <ul class="tags">
+                                <li>Blockchain</li>
+                                <li>ASP.NET Core</li>
+                                <li>LiteDB</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
 
-            </div>
+                <div class="flip-card">
+                    <div class="flip-card-inner">
+                        <div class="flip-card-front">
+                            <img src="assets/explosm.png" alt="Explosm Scrapper">
+                        </div>
+                        <div class="flip-card-back">
+                            <a href="https://github.com/skb50bd/ExplosmScrapper" target="_blank">
+                                <h1>Explosm Scrapper</h1>
+                            </a>
+
+                            <p>
+                                XPChain is a <b>blockchain</b> based solution for immutably and securely
+                                storing employees' <b>work experiences</b>, certificates, etc.
+                                in terms of <b>XPTokens</b>.
+                                Uses <b>Digital Signatures</b> for security and anonymity.
+                            </p>
+
+                            <ul class="tags">
+                                <li>Web Scrapping</li>
+                                <li>C#</li>
+                                <li>.NET Core</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>            </div>
         </section>
 
         <section id="skills">
