Removed personal info

--- a/src/index.html
+++ b/src/index.html
@@ -64,7 +64,8 @@
                 </div>
 
                 <button id="download-resume-button">
-                    <a target="_blank" href="assets/shakib-haris-resume.pdf">
+                    <a target="_blank" 
+                        href="https://docs.google.com/document/d/1lBP23QF8cg_KTZLw5EfCwZbWC9XChLA3RKXAUY_-nfA/edit?usp=sharing">
                         <div>
                             <img src="assets/download.svg" /> Resume
                         </div>
@@ -219,10 +220,9 @@
                             </a>
 
                             <p>
-                                XPChain is a <b>blockchain</b> based solution for immutably and securely
-                                storing employees' <b>work experiences</b>, certificates, etc.
-                                in terms of <b>XPTokens</b>.
-                                Uses <b>Digital Signatures</b> for security and anonymity.
+                                Explosm Scrapper is a web scrapper console application that can download 
+                                all the comics from <b><a target="_blank" href="http://explosm.net">explosm.net</a></b>
+                                automatically and stores them in an organized way.
                             </p>
 
                             <ul class="tags">
@@ -232,7 +232,8 @@
                             </ul>
                         </div>
                     </div>
-                </div>            </div>
+                </div>
+            </div>
         </section>
 
         <section id="skills">
@@ -396,11 +397,10 @@
                 </h2>
 
                 <div class="card">
-
                     <div class="header" title="Degree">
                         <img src="assets/graduate.svg" />
                         <h3>
-                            B.Sc. in Computer Science & Engineering
+                            B.Sc. in CSE
                         </h3>
                     </div>
 
@@ -433,12 +433,6 @@
                 <div class="content">
                     <span class="content-name">Name</span>
                     <span class="content-value">Shakib Haris</span>
-
-                    <span class="content-name">Email</span>
-                    <span class="content-value"><a href="mailto:skb50bd@gmail.com">skb50bd@gmail.com</a></span>
-
-                    <span class="content-name">Phone</span>
-                    <span class="content-value"><a href="tel:+8801676203752">+880 1676203752</a></span>
 
                     <span class="content-name">Location</span>
                     <span class="content-value">Dhaka, Bangladesh</span>
