--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
         Shakib Haris
     </title>
 
+    <link rel="icon" href="assets/favicon.svg" type="image/svg" sizes="16x16">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -64,7 +65,7 @@
                 </div>
 
                 <button id="download-resume-button">
-                    <a target="_blank" 
+                    <a target="_blank"
                         href="https://docs.google.com/document/d/1lBP23QF8cg_KTZLw5EfCwZbWC9XChLA3RKXAUY_-nfA/edit?usp=sharing">
                         <div>
                             <img src="assets/download.svg" /> Resume
@@ -86,7 +87,10 @@
                             <img src="assets/khata.png" alt="Khata">
                         </div>
                         <div class="flip-card-back">
-                            <h1>KHATA</h1>
+                            <a>
+                                <h1>KHATA</h1>
+                                <small>ERP solution</small>
+                            </a>
 
                             <p>
                                 Khata is a mini-ERP solution with modules like
@@ -115,6 +119,7 @@
                         <div class="flip-card-back">
                             <a href="https://dev.azure.com/brotal/CSE411_EMRG" target="_blank">
                                 <h1>EMRG</h1>
+                                <small>University Management System</small>
                             </a>
 
                             <p>
@@ -140,8 +145,10 @@
                             <img src="assets/play.png" alt="Play">
                         </div>
                         <div class="flip-card-back">
-                            <h1>Play</h1>
-
+                            <a>
+                                <h1>Play</h1>
+                                <small>Sports Events Tracker</small>
+                            </a>
                             <p>
                                 Play is a sports events tracking site.
                                 It uses a <b>C# .NET Core Web API</b> back-end and
@@ -164,7 +171,8 @@
                         </div>
                         <div class="flip-card-back">
                             <a href="https://dev.azure.com/brotal/HepatitisPrediction" target="_blank">
-                                <h1>Hepatitis Prediction</h1>
+                                <h1>Prediction</h1>
+                                <small>Live/Die Prediction of Hepatitis Patients </small>
                             </a>
 
                             <p>
@@ -189,8 +197,10 @@
                             <img src="assets/xpchain.png" alt="XPChain">
                         </div>
                         <div class="flip-card-back">
-                            <a href="https://dev.azure.com/brotal/XPChain" target="_blank">
+                            <a href="https://dev.azure.com/brotal/XPChain" 
+                               target="_blank">
                                 <h1>XPChain</h1>
+                                <small>Work-Experience recording system</small>
                             </a>
 
                             <p>
@@ -216,11 +226,12 @@
                         </div>
                         <div class="flip-card-back">
                             <a href="https://github.com/skb50bd/ExplosmScrapper" target="_blank">
-                                <h1>Explosm Scrapper</h1>
+                                <h1>Scrapper</h1>
+                                <small>Explosm Comics Scrapper</small>
                             </a>
 
                             <p>
-                                Explosm Scrapper is a web scrapper console application that can download 
+                                Explosm Scrapper is a web scrapper console application that can download
                                 all the comics from <b><a target="_blank" href="http://explosm.net">explosm.net</a></b>
                                 automatically and stores them in an organized way.
                             </p>
@@ -340,7 +351,7 @@
 
             <div id="work-experience">
                 <h2 class="sub-section-header">
-                    Work
+                    <span>Work</span>
                 </h2>
 
                 <div class="card">
@@ -393,7 +404,7 @@
 
             <div id="education">
                 <h2 class="sub-section-header">
-                    Education
+                    <span>Education</span>
                 </h2>
 
                 <div class="card">
