growing heart effect

--- a/src/index.html
+++ b/src/index.html
@@ -482,7 +482,7 @@
             </div>
 
             <span id="footer-copyright">
-                Made with ❤️ by <b>Shakib Haris</b> | ©2020
+                Made with <span id="heart">❤️</span> by <b>Shakib Haris</b> | ©2020
             </span>
         </section>
     </main>
