--- a/src/index.html
+++ b/src/index.html
@@ -152,13 +152,14 @@
                             <p>
                                 Play is a sports events tracking site.
                                 It uses a <b>C# .NET Core Web API</b> back-end and
-                                a <b>Fable-Elmish-React</b> front-end.
+                                a <b>F# Fable-Elmish-React</b> front-end.
                             </p>
 
                             <ul class="tags">
                                 <li>F#</li>
                                 <li>Fable</li>
-                                <li>.NET Core Web API</li>
+                                <li>C#</li>
+                                <li>Web API</li>
                             </ul>
                         </div>
                     </div>
