--- a/src/index.html
+++ b/src/index.html
@@ -152,7 +152,7 @@
                             <p>
                                 Play is a sports events tracking site.
                                 It uses a <b>C# .NET Core Web API</b> back-end and
-                                a <b>F# Fable-Elmish-React</b> front-end.
+                                an <b>F# Fable-Elmish-React</b> front-end.
                             </p>
 
                             <ul class="tags">
