--- a/Portfolio.Server/wwwroot/index.html
+++ b/Portfolio.Server/wwwroot/index.html
@@ -28,7 +28,7 @@
             <div id="intro-particles"></div>
 
             <div class="content">
-                <img id="avatar" src="assets/avatar.jpg" alt="Shakib Haris" height="8rem" />
+                <img id="avatar" src="assets/avatar-bw-st.jpeg" alt="Shakib Haris" height="8rem" />
                 <span id="name">Shakib Haris</span>
                 <span id="short-desc">
                     Full-Stack <b>.NET</b> Developer
@@ -198,7 +198,7 @@
                             <img src="assets/xpchain.png" alt="XPChain">
                         </div>
                         <div class="flip-card-back">
-                            <a href="https://dev.azure.com/brotal/XPChain" 
+                            <a href="https://dev.azure.com/brotal/XPChain"
                                target="_blank">
                                 <h1>XPChain</h1>
                                 <small>Work-Experience recording system</small>
@@ -441,7 +441,7 @@
             </h1>
 
             <div class="contact-container">
-                <img src="assets/shakib-haris.jpg" alt="Shakib Haris">
+                <img src="assets/avatar-contact-sf.jpeg" alt="Shakib Haris">
                 <div class="content">
                     <span class="content-name">Name</span>
                     <span class="content-value">Shakib Haris</span>
