--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
     <div class="left-sidebar">
         <div class="sidebar-header d-flex align-items-center justify-content-between">
             <img src="./assets/svg/logo.svg" alt="Logo">
-            <span class="designation">.NET Dev, DevSecOps</span>
+            <span class="designation">.NET Developer, DevOps Expert</span>
         </div>
         <img class="me" src="./assets/images/me.webp" alt="Me">
         <h2 class="email"><a href="mailto:info@shakib.io">info@shakib.io</a></h2>
@@ -186,7 +186,7 @@
                 <div class="left-sidebar">
                     <div class="sidebar-header d-flex align-items-center justify-content-between">
                         <img src="./assets/svg/logo.svg" alt="Logo">
-                        <span class="designation">.NET Dev, DevSecOps</span>
+                        <span class="designation">.NET Developer, DevOps Expert</span>
                     </div>
                     <img class="me" src="./assets/images/me.webp" alt="Me">
                     <h2 class="email"><a href="mailto:info@shakib.io">info@shakib.io</a></h2>
@@ -386,7 +386,7 @@
                                 </div>
                                 <div class="service-item scroll-animation" data-animation="fade_from_bottom">
                                     <i class="lab la-dev"></i>
-                                    <h2>DevSecOps Enthusiast</h2>
+                                    <h2>DevOps Expert</h2>
                                     <p>
                                         Building bridges isn't just for civil engineers. I connect development, security, and operations for harmonious, secure, and fast delivery pipelines.
                                     </p>
@@ -577,13 +577,13 @@
 
                                             <ul class="portfolio-categories">
                                                 <li>
-                                                    <a href="https://dot.net">.NET</a>
+                                                    <a target="_blank" href="https://dot.net">.NET</a>
                                                 </li>
                                                 <li>
-                                                    <a href="https://dotnet.microsoft.com/en-us/languages/csharp">C#</a>
+                                                    <a target="_blank" href="https://dotnet.microsoft.com/en-us/languages/csharp">C#</a>
                                                 </li>
                                                 <li>
-                                                    <a href="https://www.nopcommerce.com/en">NopCommerce</a>
+                                                    <a target="_blank" href="https://www.nopcommerce.com/en">NopCommerce</a>
                                                 </li>
                                             </ul>
                                         </div>
@@ -603,19 +603,19 @@
 
                                             <ul class="portfolio-categories">
                                                 <li>
-                                                    <a href="https://dot.net">.NET</a>
+                                                    <a target="_blank" href="https://dot.net">.NET</a>
                                                 </li>
                                                 <li>
-                                                    <a href="https://dotnet.microsoft.com/en-us/languages/csharp">C#</a>
+                                                    <a target="_blank" href="https://dotnet.microsoft.com/en-us/languages/csharp">C#</a>
                                                 </li>
                                                 <li>
-                                                    <a href="https://dotnet.microsoft.com/en-us/apps/aspnet">ASP.NET Core</a>
+                                                    <a target="_blank" href="https://dotnet.microsoft.com/en-us/apps/aspnet">ASP.NET Core</a>
                                                 </li>
                                                 <li>
-                                                    <a href="https://learn.microsoft.com/en-us/ef/core/">EF Core</a>
+                                                    <a target="_blank" href="https://learn.microsoft.com/en-us/ef/core/">EF Core</a>
                                                 </li>
                                                 <li>
-                                                    <a href="https://www.microsoft.com/en-us/sql-server/sql-server-2022">MS SQL Server</a>
+                                                    <a target="_blank" href="https://www.microsoft.com/en-us/sql-server/sql-server-2022">MS SQL Server</a>
                                                 </li>
                                             </ul>
                                         </div>
@@ -635,16 +635,16 @@
 
                                             <ul class="portfolio-categories">
                                                 <li>
-                                                    <a href="https://dot.net">.NET</a>
+                                                    <a target="_blank" href="https://dot.net">.NET</a>
                                                 </li>
                                                 <li>
-                                                    <a href="https://dotnet.microsoft.com/en-us/languages/csharp">C#</a>
+                                                    <a target="_blank" href="https://dotnet.microsoft.com/en-us/languages/csharp">C#</a>
                                                 </li>
                                                 <li>
-                                                    <a href="https://dotnet.microsoft.com/en-us/apps/aspnet">ASP.NET Core</a>
+                                                    <a target="_blank" href="https://dotnet.microsoft.com/en-us/apps/aspnet">ASP.NET Core</a>
                                                 </li>
                                                 <li>
-                                                    <a href="https://learn.microsoft.com/en-us/ef/core/">EF Core</a>
+                                                    <a target="_blank" href="https://learn.microsoft.com/en-us/ef/core/">EF Core</a>
                                                 </li>
                                                 <li>
                                                     <a href="https://learn.microsoft.com/en-us/ef/core/">Postgres</a>
@@ -667,13 +667,13 @@
 
                                             <ul class="portfolio-categories">
                                                 <li>
-                                                    <a href="https://dot.net">.NET</a>
+                                                    <a target="_blank" href="https://dot.net">.NET</a>
                                                 </li>
                                                 <li>
-                                                    <a href="https://dotnet.microsoft.com/en-us/languages/fsharp">F#</a>
+                                                    <a target="_blank" href="https://dotnet.microsoft.com/en-us/languages/fsharp">F#</a>
                                                 </li>
                                                 <li>
-                                                    <a href="https://safe-stack.github.io/">SAFE</a>
+                                                    <a target="_blank" href="https://safe-stack.github.io/">SAFE</a>
                                                 </li>
                                             </ul>
                                         </div>
@@ -699,7 +699,9 @@
                                 </h4>
                                 <h1 class="scroll-animation" data-animation="fade_from_bottom">Let's Work <span>Together!</span></h1>
                             </div>
-                            <h3 class="scroll-animation" data-animation="fade_from_bottom">info@shakib.io</h3>
+                            <h3 class="scroll-animation" data-animation="fade_from_bottom">
+                                <a class="email" href="mailto:info@shakib.io">info@shakib.io</a>
+                            </h3>
                             <p id="required-msg">* Marked fields are required</p>
 
                             <form class="contact-form scroll-animation"
