--- a/index.html
+++ b/index.html
@@ -588,7 +588,7 @@
                                             </ul>
                                         </div>
                                         <h2>
-                                            <a href="https://github.com/skb50bd/nop-plugin-pathao-courier">
+                                            <a target="_blank" href="https://github.com/skb50bd/nop-plugin-pathao-courier">
                                                 Pathao Courier NopCommerce Plugin
                                             </a>
                                         </h2>
@@ -620,7 +620,7 @@
                                             </ul>
                                         </div>
                                         <h2>
-                                            <a href="https://github.com/skb50bd/khata">
+                                            <a target="_blank" href="https://github.com/skb50bd/khata">
                                                 Khata: a modern ERP solution for small businesses
                                             </a>
                                         </h2>
@@ -647,12 +647,12 @@
                                                     <a target="_blank" href="https://learn.microsoft.com/en-us/ef/core/">EF Core</a>
                                                 </li>
                                                 <li>
-                                                    <a href="https://learn.microsoft.com/en-us/ef/core/">Postgres</a>
+                                                    <a target="_blank" href="https://learn.microsoft.com/en-us/ef/core/">Postgres</a>
                                                 </li>
                                             </ul>
                                         </div>
                                         <h2>
-                                            <a href="https://github.com/skb50bd/scroll">
+                                            <a target="_blank" href="https://github.com/skb50bd/scroll">
                                                 Scroll: A Product Magazine
                                             </a>
                                         </h2>
@@ -678,7 +678,7 @@
                                             </ul>
                                         </div>
                                         <h2>
-                                            <a href="https://github.com/skb50bd/bxtaxcalc">
+                                            <a target="_blank" href="https://github.com/skb50bd/bxtaxcalc">
                                                 BD Tax Calc - A Bangladeshi Tax Calculator
                                             </a>
                                         </h2>
